tests/kuttl-test/best-practices/t07-disallow-cri-sock-mount/01-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- ../../../../best-practices/disallow_cri_sock_mount/disallow_cri_sock_mount.yaml
assert:
- policy-assert.yaml
unitTest: false
