tests/kuttl-test/best-practices/t07-disallow-cri-sock-mount/02-install-resource1.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- ../../../../best-practices/disallow_cri_sock_mount/resources/01-resource.yaml
assert:
- resource01-assert.yaml
unitTest: false
