tests/kuttl-test/best-practices/t07-disallow-cri-sock-mount/03-cleanup.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
- command: kubectl delete -f ../../../../best-practices/disallow_cri_sock_mount/resources/01-resource.yaml --force --wait=true --ignore-not-found=true
unitTest: false
