tests/kuttl-test/best-practices/t07-disallow-cri-sock-mount/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-container-sock-mounts
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
