tests/kuttl-test/best-practices/t07-disallow-cri-sock-mount/resource02-assert.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
  namespace: default
status:
 phase: Running
---
apiVersion: wgpolicyk8s.io/v1alpha2
kind: PolicyReport
metadata:
  name: cpol-disallow-container-sock-mounts
  namespace: default
results:
- policy: disallow-container-sock-mounts
  result: pass
  rule: validate-containerd-sock-mount
  resources:
    - apiVersion: v1 
      kind: Pod
      name: goodpod01
      namespace: default
- policy: disallow-container-sock-mounts
  result: pass
  rule: validate-crio-sock-mount
  resources:
    - apiVersion: v1 
      kind: Pod
      name: goodpod01
      namespace: default
- policy: disallow-container-sock-mounts
  result: pass
  rule: validate-docker-sock-mount
  resources:
    - apiVersion: v1 
      kind: Pod
      name: goodpod01
      namespace: default
